--- a/SlmaxTestovoeZadanie/SlmaxTestovoeZadanie/Info.plist
+++ b/SlmaxTestovoeZadanie/SlmaxTestovoeZadanie/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Raleway-SemiBold.ttf</string>
+		<string>Raleway-Light.ttf</string>
 	</array>
 </dict>
 </plist>
